--- a/_config.yml
+++ b/_config.yml
@@ -18,22 +18,29 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: BoxLambda
+email: ruben.lysens2@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  An FPGA based microcomputer sandbox for software and RTL experimentation
+baseurl: "boxlambda" # the subpath of your site, e.g. /blog
+url: "epsilon537.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+#twitter_username: jekyllrb
+github_username:  epsilon537
+
+permalink: /:title/
+markdown: kramdown
+paginate: 5
+paginate_path: "/:num/"
+date_format: "%b %-d, %Y"
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
-
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
