--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,10 @@
 
 title: BoxLambda
 email: ruben.lysens2@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  An FPGA based microcomputer sandbox for software and RTL experimentation
+description: An FPGA based microcomputer sandbox for software and RTL experimentation.
 #baseurl: "boxlambda" # the subpath of your site, e.g. /blog
 url: "epsilon537.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-#twitter_username: jekyllrb
+twitter_username: 2Lysens 
 github_username:  epsilon537
 
 permalink: /:title/
