--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "fpga/ibex_wb"]
-	path = fpga/ibex_wb
+	path = sub/ibex_wb
 	url = https://github.com/epsilon537/ibex_wb
 	branch = boxlambda
 [submodule "fpga/ibex"]
-	path = fpga/ibex
+	path = sub/ibex
 	url = https://github.com/epsilon537/ibex
 	branch = boxlambda
 [submodule "fpga/wbuart32"]
-	path = fpga/wbuart32
+	path = sub/wbuart32
 	url = https://github.com/epsilon537/wbuart32
 	branch = boxlambda
