--- a/projects/hello_world/Makefile
+++ b/projects/hello_world/Makefile
@@ -3,36 +3,35 @@ VIVADO_TCL := $(TOP_DIR)/build_sys/vivado.tcl
 PRG_BITSTREAM_TCL := $(TOP_DIR)/build_sys/prg_bitstream.tcl
 PART = xc7a35ticsg324-1L
 BENDER_GEN_SCRIPT = generated/sources.tcl
-MEM_FILES := $(shell bender script flist -t memory)
-CONSTRAINTS := $(shell bender script flist -n -t constraints)
+MEM_FILES = $(shell bender update && bender script flist -t memory)
+CONSTRAINTS = $(shell bender update && bender script flist -n -t constraints)
 CONSTRAINTS_GEN_SCRIPT = generated/constraints.tcl
 MEM_FILES_GEN_SCRIPT = generated/mem_files.tcl
 IP_ADDRESS := $(shell grep nameserver /etc/resolv.conf | sed 's/nameserver //')
 
-#Flags
-OOC = 1
+default: dryrun
 
-.PHONY: always
-always:
+.PHONY: bender_update
+bender_update:
 	bender update
 
 .PHONY: constraints
-constraints: $(CONSTRAINTS)
+constraints: $(CONSTRAINTS) 
 	$(RM) -f $(CONSTRAINTS_GEN_SCRIPT)
 	$(foreach constraint, $^, echo add_files -fileset constrs_1 $(constraint) >> $(CONSTRAINTS_GEN_SCRIPT))
-ifdef OOC
-	$(foreach constraint, $^, echo set_property USED_IN {synthesis out_of_context} [get_files $(constraint)] >> $(CONSTRAINTS_GEN_SCRIPT))
-endif
 
 .PHONY: mem_files
-mem_files: 
+mem_files: $(MEM_FILES) 
 	$(RM) -f $(MEM_FILES_GEN_SCRIPT)
 	$(foreach mem_file, $(MEM_FILES), echo add_files -norecurse $(mem_file) >> $(MEM_FILES_GEN_SCRIPT))
 
-%.mem :
+.PHONY: force
+force :
+
+%.mem : force
 	$(MAKE) -C $(@D)
 
-$(BENDER_GEN_SCRIPT): always
+$(BENDER_GEN_SCRIPT): bender_update
 	mkdir -p generated
 	bender script -t synthesis vivado > $(BENDER_GEN_SCRIPT)
 
