--- a/components/ibex/Bender.yml
+++ b/components/ibex/Bender.yml
@@ -14,62 +14,108 @@ sources:
     defines:
       PRIM_DEFAULT_IMPL: prim_pkg::ImplXilinx
     include_dirs:
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_dv_dv_fcov_macros_0
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_assert_0.1/rtl
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_util_get_scramble_params_0/rtl
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_util_memload_0/rtl
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl
       - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl
       - ../../sub/ibex/vendor/lowrisc_ip/dv/sv/dv_utils
     files:
-      - ../../sub/ibex/shared/rtl/fpga/xilinx/clkgen_xil7series.sv
-      - ../../sub/ibex/dv/uvm/core_ibex/common/prim/prim_pkg.sv
-      - ../../sub/ibex/dv/uvm/core_ibex/common/prim/prim_clock_gating.sv      
-      - ../../sub/ibex/dv/uvm/core_ibex/common/prim/prim_buf.sv
-      - ../../sub/ibex/dv/uvm/core_ibex/common/prim/prim_clock_mux2.sv
-      - ../../sub/ibex/dv/uvm/core_ibex/common/prim/prim_flop.sv
-      - ../../sub/ibex/dv/uvm/core_ibex/common/prim/prim_ram_1p.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim_xilinx/rtl/prim_xilinx_clock_gating.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_ram_1p_pkg.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_secded_pkg.sv      
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_cipher_pkg.sv      
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim_generic/rtl/prim_generic_buf.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_lfsr.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_prince.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_util_pkg.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_ram_1p_adv.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_ram_1p_scr.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_secded_inv_22_16_dec.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_secded_inv_22_16_enc.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_secded_inv_28_22_dec.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_secded_inv_28_22_enc.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_secded_inv_39_32_dec.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_secded_inv_39_32_enc.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_secded_inv_hamming_22_16_dec.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_secded_inv_hamming_22_16_enc.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_secded_inv_hamming_39_32_dec.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_secded_inv_hamming_39_32_enc.sv
-      - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl/prim_subst_perm.sv
-      - ../../sub/ibex/rtl/ibex_pkg.sv
-      - ../../sub/ibex/rtl/ibex_alu.sv
-      - ../../sub/ibex/rtl/ibex_branch_predict.sv
-      - ../../sub/ibex/rtl/ibex_compressed_decoder.sv
-      - ../../sub/ibex/rtl/ibex_controller.sv
-      - ../../sub/ibex/rtl/ibex_core.sv
-      - ../../sub/ibex/rtl/ibex_counter.sv
-      - ../../sub/ibex/rtl/ibex_cs_registers.sv
-      - ../../sub/ibex/rtl/ibex_csr.sv
-      - ../../sub/ibex/rtl/ibex_decoder.sv
-      - ../../sub/ibex/rtl/ibex_dummy_instr.sv
-      - ../../sub/ibex/rtl/ibex_ex_block.sv
-      - ../../sub/ibex/rtl/ibex_fetch_fifo.sv
-      - ../../sub/ibex/rtl/ibex_icache.sv
-      - ../../sub/ibex/rtl/ibex_id_stage.sv
-      - ../../sub/ibex/rtl/ibex_if_stage.sv
-      - ../../sub/ibex/rtl/ibex_load_store_unit.sv
-      - ../../sub/ibex/rtl/ibex_lockstep.sv
-      - ../../sub/ibex/rtl/ibex_multdiv_fast.sv
-      - ../../sub/ibex/rtl/ibex_multdiv_slow.sv
-      - ../../sub/ibex/rtl/ibex_pmp.sv
-      - ../../sub/ibex/rtl/ibex_prefetch_buffer.sv
-      - ../../sub/ibex/rtl/ibex_register_file_fpga.sv
-      - ../../sub/ibex/rtl/ibex_wb_stage.sv            
-      - ../../sub/ibex/rtl/ibex_top.sv
-
-
-    
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_pkg_0.1/rtl/ibex_pkg.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_prim_pkg_0.1/prim_pkg.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_cipher_pkg_0.1/rtl/prim_cipher_pkg.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_generic_buf_0/rtl/prim_generic_buf.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_generic_clock_gating_0/rtl/prim_generic_clock_gating.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_generic_flop_0/rtl/prim_generic_flop.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_ram_1p_pkg_0/rtl/prim_ram_1p_pkg.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_ram_2p_pkg_0/rtl/prim_ram_2p_pkg.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_pkg.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_22_16_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_22_16_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_28_22_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_28_22_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_39_32_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_39_32_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_64_57_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_64_57_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_72_64_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_72_64_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_22_16_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_22_16_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_39_32_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_39_32_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_72_64_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_72_64_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_76_68_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_76_68_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_22_16_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_22_16_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_28_22_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_28_22_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_39_32_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_39_32_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_64_57_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_64_57_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_72_64_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_72_64_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_22_16_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_22_16_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_39_32_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_39_32_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_72_64_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_72_64_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_76_68_dec.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_76_68_enc.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_util_0.1/rtl/prim_util_pkg.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_xilinx_buf_0/rtl/prim_xilinx_buf.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_xilinx_clock_gating_0/rtl/prim_xilinx_clock_gating.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_xilinx_clock_mux2_0/rtl/prim_xilinx_clock_mux2.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_xilinx_flop_0/rtl/prim_xilinx_flop.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_icache_0.1/rtl/ibex_icache.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_cipher_0/rtl/prim_subst_perm.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_cipher_0/rtl/prim_present.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_cipher_0/rtl/prim_prince.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_generic_clock_mux2_0/rtl/prim_generic_clock_mux2.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_generic_ram_1p_0/rtl/prim_generic_ram_1p.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_generic_ram_2p_0/rtl/prim_generic_ram_2p.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_lfsr_0.1/rtl/prim_lfsr.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_onehot_check_0/rtl/prim_onehot_check.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_buf_0/prim_buf.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_clock_gating_0/prim_clock_gating.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_clock_mux2_0/prim_clock_mux2.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_flop_0/prim_flop.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_ram_2p_0/prim_ram_2p.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_badbit_ram_1p_0/prim_badbit_ram_1p.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_ram_1p_0/prim_ram_1p.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_fpga_xilinx_shared_0/rtl/fpga/xilinx/clkgen_xil7series.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_fpga_xilinx_shared_0/rtl/ram_2p.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_alu.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_branch_predict.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_compressed_decoder.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_controller.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_cs_registers.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_csr.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_counter.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_decoder.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_ex_block.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_fetch_fifo.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_id_stage.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_if_stage.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_load_store_unit.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_multdiv_fast.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_multdiv_slow.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_prefetch_buffer.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_pmp.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_wb_stage.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_dummy_instr.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_core.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_ram_1p_adv_0.1/rtl/prim_ram_1p_adv.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_ram_1p_scr_0.1/rtl/prim_ram_1p_scr.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_register_file_ff.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_register_file_fpga.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_register_file_latch.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_lockstep.sv
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_top.sv
+      - rtl/ibex_top_wrap.sv
+      
