--- a/components/ibex/Bender.yml
+++ b/components/ibex/Bender.yml
@@ -4,15 +4,9 @@ package:
   name: ibex
 
 sources:
-  #This target is selected when building a component separately (i.e. running make synth in a component directory
-  #This target is not selected during a project build
-  - target: ooc
-    files:
-      - rtl/ibex_top_wrap.sv
-
-  - target: any(synthesis, simulation)
-    defines:
-      PRIM_DEFAULT_IMPL: prim_pkg::ImplXilinx
+#This target is selected when building a component separately (i.e. running make synth in a component directory
+#This target is not selected during a project build
+  - target: not(memory)
     include_dirs:
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_dv_dv_fcov_macros_0
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_assert_0.1/rtl
@@ -20,8 +14,9 @@ sources:
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_util_memload_0/rtl
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl
       - ../../sub/ibex/vendor/lowrisc_ip/ip/prim/rtl
-      - ../../sub/ibex/vendor/lowrisc_ip/dv/sv/dv_utils
+      - ../../sub/ibex/vendor/lowrisc_ip/dv/sv/dv_utils     
     files:
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_pkg.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_pkg_0.1/rtl/ibex_pkg.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_prim_pkg_0.1/prim_pkg.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_cipher_pkg_0.1/rtl/prim_cipher_pkg.sv
@@ -30,43 +25,6 @@ sources:
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_generic_flop_0/rtl/prim_generic_flop.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_ram_1p_pkg_0/rtl/prim_ram_1p_pkg.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_ram_2p_pkg_0/rtl/prim_ram_2p_pkg.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_pkg.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_22_16_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_22_16_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_28_22_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_28_22_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_39_32_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_39_32_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_64_57_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_64_57_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_72_64_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_72_64_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_22_16_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_22_16_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_39_32_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_39_32_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_72_64_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_72_64_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_76_68_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_76_68_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_22_16_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_22_16_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_28_22_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_28_22_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_39_32_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_39_32_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_64_57_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_64_57_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_72_64_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_72_64_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_22_16_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_22_16_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_39_32_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_39_32_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_72_64_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_72_64_enc.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_76_68_dec.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_76_68_enc.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_util_0.1/rtl/prim_util_pkg.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_xilinx_buf_0/rtl/prim_xilinx_buf.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_xilinx_clock_gating_0/rtl/prim_xilinx_clock_gating.sv
@@ -74,22 +32,17 @@ sources:
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_xilinx_flop_0/rtl/prim_xilinx_flop.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_icache_0.1/rtl/ibex_icache.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_cipher_0/rtl/prim_subst_perm.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_cipher_0/rtl/prim_present.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_cipher_0/rtl/prim_prince.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_generic_clock_mux2_0/rtl/prim_generic_clock_mux2.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_generic_ram_1p_0/rtl/prim_generic_ram_1p.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_generic_ram_2p_0/rtl/prim_generic_ram_2p.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_lfsr_0.1/rtl/prim_lfsr.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_onehot_check_0/rtl/prim_onehot_check.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_buf_0/prim_buf.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_clock_gating_0/prim_clock_gating.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_clock_mux2_0/prim_clock_mux2.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_flop_0/prim_flop.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_ram_2p_0/prim_ram_2p.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_badbit_ram_1p_0/prim_badbit_ram_1p.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_ram_1p_0/prim_ram_1p.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_fpga_xilinx_shared_0/rtl/fpga/xilinx/clkgen_xil7series.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_fpga_xilinx_shared_0/rtl/ram_2p.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_alu.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_branch_predict.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_compressed_decoder.sv
@@ -116,6 +69,62 @@ sources:
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_register_file_fpga.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_register_file_latch.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_lockstep.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_top.sv
-      - rtl/ibex_top_wrap.sv
+        
+  - target: all(ooc,not(verilator))
+    files:
+     - rtl/ibex_top_wrap.sv
+     - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_top.sv
+  - target: verilator
+    files:
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_top.sv
+    defines:
+      PRIM_DEFAULT_IMPL: prim_pkg::ImplGeneric
+  - target: vivado
+    files:
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_top.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_pkg.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_22_16_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_22_16_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_28_22_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_28_22_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_39_32_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_39_32_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_64_57_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_64_57_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_72_64_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_72_64_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_22_16_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_22_16_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_39_32_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_39_32_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_72_64_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_72_64_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_76_68_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_hamming_76_68_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_22_16_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_22_16_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_28_22_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_28_22_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_39_32_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_39_32_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_64_57_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_64_57_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_72_64_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_72_64_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_22_16_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_22_16_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_39_32_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_39_32_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_72_64_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_72_64_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_76_68_dec.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_inv_hamming_76_68_enc.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_fpga_xilinx_shared_0/rtl/fpga/xilinx/clkgen_xil7series.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_cipher_0/rtl/prim_present.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_fpga_xilinx_shared_0/rtl/ram_2p.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_ram_2p_0/prim_ram_2p.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_generic_ram_2p_0/rtl/prim_generic_ram_2p.sv
+    defines:
+      PRIM_DEFAULT_IMPL: prim_pkg::ImplXilinx
+
       
