--- a/components/wbuart32/Bender.yml
+++ b/components/wbuart32/Bender.yml
@@ -11,7 +11,12 @@ sources:
   - target: constraints
     files:
       - ooc.xdc
-  - target: any(synthesis, simulation)
+
+  - target: all(verilator,ooc)
+    files:
+     - rtl/wb_wbuart_wrap_wrap.sv
+     
+  - target: any(vivado, verilator)
     defines:
       NO_MODPORT_EXPRESSIONS: ~
     files:
@@ -20,3 +25,4 @@ sources:
       - ../../sub/wbuart32/rtl/ufifo.v
       - ../../sub/wbuart32/rtl/wbuart.v
       - ../../sub/ibex_wb/soc/fpga/arty-a7-35/rtl/wb_wbuart_wrap.sv
+
