--- a/projects/hello_world/Bender.yml
+++ b/projects/hello_world/Bender.yml
@@ -12,14 +12,14 @@ dependencies:
   
 sources:
   - target: constraints
-    defines:
-      NO_MODPORT_EXPRESSIONS: ~
     files:
       - ../../sub/ibex_wb/soc/fpga/arty-a7-35/constrs/Arty-A7-35-Master.xdc
   - target: memory
     files:
       - ../../sub/ibex_wb/soc/fpga/arty-a7-35/sw/examples/hello/hello.mem    
-  - target: any(synthesis, simulation)
+  - target: any(vivado,verilator)
+    defines:
+      NO_MODPORT_EXPRESSIONS: ~
     #spram and timer should be separate components, but since I won't use them
     #as Boxlambda components, I'm leaving them here in the hello world example
     files:
