build system fixes and support for vlt files added

--- a/components/ibex_wb_core/Makefile
+++ b/components/ibex_wb_core/Makefile
@@ -1,8 +1,8 @@
 #Path to the root of the repository
 TOP_DIR := ../..
 
-#Flag indicating Out-of-Context Synthesis
-OOC = 1
+#Flag indicating Out-of-Context Synthesis of given component
+OOC = ibex_wb_core
 
 #Include common Make flags and rules
 include $(TOP_DIR)/build_sys/common.mk
