--- a/components/wbuart32/Makefile
+++ b/components/wbuart32/Makefile
@@ -2,7 +2,7 @@
 TOP_DIR := ../..
 
 #Flag indicating Out-of-Context Synthesis
-OOC = 1
+OOC = wbuart32
 
 #Include common Make flags and rules
 include $(TOP_DIR)/build_sys/common.mk
