--- a/components/ibex/Bender.yml
+++ b/components/ibex/Bender.yml
@@ -3,10 +3,23 @@ package:
   # The name of the package. Required.
   name: ibex
 
+#Target <module name> is set when building a component separately (i.e. running make synth in a component directory).
+#Target vivado is set when synthesizing using vivado.
+#Target verilator is set when linting using verilator.
+#Target memory is set when retrieving memory files for this component or project.
+#Target constraints is set when retrieving xdc constraints files for this component or project.
+#Target vlt set is when retrieving .vlt verilator config files
+
 sources:
-#This target is selected when building a component separately (i.e. running make synth in a component directory
-#This target is not selected during a project build
-  - target: not(memory)
+  - target: vlt
+    files:
+    - lint.vlt  
+  - target: verilator
+    files:
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_register_file_ff.sv
+    defines:
+      PRIM_DEFAULT_IMPL: prim_pkg::ImplGeneric
+  - target: any(verilator, vivado)
     include_dirs:
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_dv_dv_fcov_macros_0
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_assert_0.1/rtl
@@ -65,24 +78,14 @@ sources:
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_core.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_ram_1p_adv_0.1/rtl/prim_ram_1p_adv.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_ram_1p_scr_0.1/rtl/prim_ram_1p_scr.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_register_file_ff.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_register_file_fpga.sv
-      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_register_file_latch.sv
       - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_lockstep.sv
-        
-  - target: all(ooc,not(verilator))
+      - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_top.sv      
+
+  - target: all(ibex,vivado)
     files:
-     - rtl/ibex_top_wrap.sv
-     - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_top.sv
-  - target: verilator
-    files:
-    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_top.sv
-    defines:
-      PRIM_DEFAULT_IMPL: prim_pkg::ImplGeneric
+    - rtl/ibex_top_wrap.sv
   - target: vivado
     files:
-    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_top.sv
-    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_pkg.sv
     - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_22_16_dec.sv
     - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_22_16_enc.sv
     - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_28_22_dec.sv
@@ -124,6 +127,7 @@ sources:
     - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_fpga_xilinx_shared_0/rtl/ram_2p.sv
     - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_abstract_ram_2p_0/prim_ram_2p.sv
     - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_generic_ram_2p_0/rtl/prim_generic_ram_2p.sv
+    - ../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_register_file_fpga.sv   
     defines:
       PRIM_DEFAULT_IMPL: prim_pkg::ImplXilinx
 
