--- a/components/ibex_wb_core/Bender.yml
+++ b/components/ibex_wb_core/Bender.yml
@@ -9,9 +9,6 @@ dependencies:
   ibex_wb_common: { path: "../../components/ibex_wb_common" }
   
 sources:
-  - target: all(verilator,ooc)
-    files:
-      - rtl/ibex_wb_core_wrapper.sv    
   - target: verilator
     defines:
       NO_MODPORT_EXPRESSIONS: ~
@@ -26,4 +23,7 @@ sources:
       - ../../sub/ibex_wb/rtl/wb_ibex_core.sv
       - ../../sub/ibex_wb/rtl/core_if.sv
       - ../../sub/ibex_wb/rtl/core2wb.sv
+  - target: ibex_wb_core
+    files:
+      - rtl/ibex_wb_core_wrapper.sv    
     
