--- a/components/wb_gpio/Makefile
+++ b/components/wb_gpio/Makefile
@@ -2,7 +2,7 @@
 TOP_DIR := ../..
 
 #Flag indicating Out-of-Context Synthesis
-OOC = 1
+OOC = wb_gpio
 
 #Include common Make flags and rules
 include $(TOP_DIR)/build_sys/common.mk
