--- a/components/wbuart32/Bender.yml
+++ b/components/wbuart32/Bender.yml
@@ -8,11 +8,7 @@ dependencies:
   ibex_wb_common: { path: "../../components/ibex_wb_common" }
   
 sources:
-  - target: constraints
-    files:
-      - ooc.xdc
-
-  - target: all(verilator,ooc)
+  - target: all(verilator, wbuart32)
     files:
      - rtl/wb_wbuart_wrap_wrap.sv
      
