--- a/projects/hello_world/Makefile
+++ b/projects/hello_world/Makefile
@@ -1,6 +1,10 @@
 #Path to the root of the repository
 TOP_DIR := ../..
 
+#Compile and link flag for Verilator testbench code.
+VERILATOR_CPPFLAGS = -CFLAGS "-I$(abspath $(TOP_DIR))/sub/wbuart32/bench/cpp/"
+VERILATOR_LDFLAGS = -LDFLAGS "-lncurses"
+
 #Include common Make flags and rules
 include $(TOP_DIR)/build_sys/common.mk
 
