--- a/projects/hello_world/Bender.yml
+++ b/projects/hello_world/Bender.yml
@@ -13,6 +13,10 @@ dependencies:
   ibex_wb_core: { path: "../../components/ibex_wb_core" }
   
 sources:
+  - target: sim
+    files:
+      - sim/sim_main.cpp
+      - ../../sub/wbuart32/bench/cpp/uartsim.cpp
   - target: constraints
     files:
       - ../../sub/ibex_wb/soc/fpga/arty-a7-35/constrs/Arty-A7-35-Master.xdc
