riscv-dbg/openocd bring-up on Arty A7

--- a/components/ibex/Makefile
+++ b/components/ibex/Makefile
@@ -1,7 +1,9 @@
 #Path to the root of the repository
 TOP_DIR := ../..
+TOP_MODULE := ibex_top
 
-#Flag indicating Out-of-Context Synthesis of given component
+#Flag indicating Out-of-Context Synthesis of given component.
+#The value corresponds the Bender.yml target used to select OOC specific files and defines.
 OOC = ibex
 
 #Include common Make flags and rules
