--- a/components/riscv-dbg/Makefile
+++ b/components/riscv-dbg/Makefile
@@ -1,10 +1,9 @@
 #Path to the root of the repository
 TOP_DIR := ../..
+TOP_MODULE := riscv_dbg_wrapper
 
-VERILATOR_CPPFLAGS = --top-module riscv_dbg_wrapper #-CFLAGS "-std=gnu++11 -O2"
-VERILATOR_LDFLAGS = -LDFLAGS "-lncurses"
-
-#Flag indicating Out-of-Context Synthesis
+#Flag indicating Out-of-Context Synthesis.
+#The value corresponds the Bender.yml target used to select OOC specific files and defines.
 OOC = riscv-dbg
 
 #Include common Make flags and rules
