--- a/components/wb_gpio/Makefile
+++ b/components/wb_gpio/Makefile
@@ -1,7 +1,9 @@
 #Path to the root of the repository
 TOP_DIR := ../..
+TOP_MODULE := wb_gpio_wrapper
 
-#Flag indicating Out-of-Context Synthesis
+#Flag indicating Out-of-Context Synthesis.
+#The value corresponds the Bender.yml target used to select OOC specific files and defines.
 OOC = wb_gpio
 
 #Include common Make flags and rules
