--- a/components/wbuart32/Makefile
+++ b/components/wbuart32/Makefile
@@ -1,7 +1,9 @@
 #Path to the root of the repository
 TOP_DIR := ../..
+TOP_MODULE := wb_wbuart_wrap_wrap
 
-#Flag indicating Out-of-Context Synthesis
+#Flag indicating Out-of-Context Synthesis.
+#The value corresponds the Bender.yml target used to select OOC specific files and defines.
 OOC = wbuart32
 
 #Include common Make flags and rules
