Fix openocd target reset. Add command line option to verilator model to specify if we want to attach a debugger.

--- a/openocd/verilator_riscv_dbg.cfg
+++ b/openocd/verilator_riscv_dbg.cfg
@@ -8,6 +8,9 @@ remote_bitbang host localhost
 
 remote_bitbang port 9999
 
+# we don't have srst
+reset_config trst_only
+
 set _CHIPNAME riscv
 jtag newtap $_CHIPNAME cpu -irlen 5 -expected-id 0x249511C3
 
@@ -18,6 +21,7 @@ foreach t [jtag names] {
 set _TARGETNAME $_CHIPNAME.cpu
 target create $_TARGETNAME riscv -chain-position $_TARGETNAME 
 
+
 riscv set_reset_timeout_sec 2000
 riscv set_command_timeout_sec 2000
 
@@ -27,7 +31,9 @@ riscv set_prefer_sba on
 # dump jtag chain
 scan_chain
 
+echo "init..."
 init
 
-halt
+reset halt
+
 echo "Ready for Remote Connections on port 3333."
