Added reset halt to OpenOCD config script for Arty

--- a/openocd/digilent_arty_a7.cfg
+++ b/openocd/digilent_arty_a7.cfg
@@ -38,8 +38,10 @@ riscv set_prefer_sba on
 # Dump jtag chain
 scan_chain
 
+echo "init..."
 init
 
 # Halt the target.
-halt
+reset halt
+
 echo "Ready for Remote Connections"
