Can execute code from DDR now

--- a/components/litedram/Makefile
+++ b/components/litedram/Makefile
@@ -9,8 +9,6 @@ OOC = litedram
 #Include common Make flags and rules
 include $(TOP_DIR)/build_sys/common.mk
 
-gen_sim_core:
+gen_core:
 	litedram_gen artya7dram.yml --sim --gateware-dir sim/rtl --software-dir sim/sw --name litedram
-
-gen_arty_core:
 	litedram_gen artya7dram.yml --gateware-dir arty/rtl --software-dir arty/sw --name litedram
