--- a/projects/ddr_test/src/Makefile
+++ b/projects/ddr_test/src/Makefile
@@ -19,7 +19,7 @@ CPPFLAGS = -DCONFIG_CPU_NOP=\"nop\" \
            -DMAIN_RAM_BASE2=0x50000000UL \
            -DCSR_BASE=0x10030000 \
            -DSDRAM_TEST_DISABLE \
-           -DMEMTEST_SIZE_SIM=65536 \
+           -DMEMTEST_SIZE_SIM=8192 \
            -DMEMTEST_SIZE_ARTY=\(64*1024*1024\)
 
 #Contains bootstrap code such as vectors and code to glue libc to the platform
