--- a/projects/ddr_test/src/fpga/Makefile
+++ b/projects/ddr_test/src/fpga/Makefile
@@ -1,5 +1,5 @@
 #Path to the root of the repository
-TOP_DIR := ../../..
+TOP_DIR := ../../../..
 
 PROGRAM = ddr_test
 INCLUDES = -I$(TOP_DIR)/sw/bootstrap \
@@ -9,7 +9,7 @@ INCLUDES = -I$(TOP_DIR)/sw/bootstrap \
 	-I$(TOP_DIR)/sub/litex/litex/soc/software \
 	-I$(TOP_DIR)/sub/litex/litex/soc/software/libbase \
     -I$(TOP_DIR)/sub/litex/litex/soc/cores/cpu/ibex \
-	-I$(TOP_DIR)/components/litedram/sim/sw/include
+	-I$(TOP_DIR)/components/litedram/arty/sw/include
 
 #-DSDRAM_TEST_DISABLE disables the memory test function inside sdram_init()
 #This function gets called before ddrctrl_init_done is written, which doesn't work.
@@ -19,13 +19,12 @@ CPPFLAGS = -DCONFIG_CPU_NOP=\"nop\" \
            -DMAIN_RAM_BASE2=0x50000000UL \
            -DCSR_BASE=0x10030000 \
            -DSDRAM_TEST_DISABLE \
-           -DMEMTEST_SIZE_SIM=8192 \
-           -DMEMTEST_SIZE_ARTY=\(64*1024*1024\)
+           -DMEMTEST_SIZE=\(64*1024*1024\)
 
 #Contains bootstrap code such as vectors and code to glue libc to the platform
 LIBS = $(TOP_DIR)/sw/bootstrap/bootstrap.lib.o
-SRCS = $(PROGRAM).c \
-    memtest.c \
+SRCS = ../$(PROGRAM).c \
+    ../memtest.c \
 	$(TOP_DIR)/sub/ibex_wb/soc/fpga/arty-a7-35/sw/libs/soc/gpio.c \
 	$(TOP_DIR)/sub/ibex_wb/soc/fpga/arty-a7-35/sw/libs/soc/utils.c \
 	$(TOP_DIR)/sub/litex/litex/soc/software/liblitedram/sdram.c
@@ -39,7 +38,7 @@ LINKER_SCRIPT = $(TOP_DIR)/sw/bootstrap/link_internal_mem.ld
 #Compile with picolibc specs to pull in picolibc library code.
 CFLAGS = --specs=$(TOP_DIR)/sw/picolibc-install/picolibc.specs $(CPPFLAGS) -Wall -g -O1
 
-LDFLAGS = $(CFLAGS) -T $(LINKER_SCRIPT) -Wl,--gc-sections -Wl,--Map,$(PROGRAM).map
+LDFLAGS = $(CFLAGS) -T $(LINKER_SCRIPT) -Wl,--gc-sections -Wl,--Map,../$(PROGRAM).map
 
 OBJS := $(addsuffix .o,$(basename $(SRCS)))
 
