--- a/projects/picolibc_test/Bender.yml
+++ b/projects/picolibc_test/Bender.yml
@@ -16,9 +16,12 @@ sources:
   - target: constraints
     files:
       - ../../sub/ibex_wb/soc/fpga/arty-a7-35/constrs/Arty-A7-35-Master.xdc
-  - target: memory
+  - target: memory_sim
     files:
       - src/spram.mem
+  - target: memory_fpga
+    files:
+      - src/spram.mem      
   - target: verilator
     files:
       - sim/sim_main.cpp
