--- a/projects/hello_world/Bender.yml
+++ b/projects/hello_world/Bender.yml
@@ -16,7 +16,10 @@ sources:
   - target: constraints
     files:
       - ../../sub/ibex_wb/soc/fpga/arty-a7-35/constrs/Arty-A7-35-Master.xdc
-  - target: memory
+  - target: memory_sim
+    files:
+      - ../../sub/ibex_wb/soc/fpga/arty-a7-35/sw/examples/hello/spram.mem    
+  - target: memory_fpga
     files:
       - ../../sub/ibex_wb/soc/fpga/arty-a7-35/sw/examples/hello/spram.mem    
   - target: verilator
