Documentation added. Minor fixes.

--- a/components/litedram/artya7dram.yml
+++ b/components/litedram/artya7dram.yml
@@ -4,12 +4,13 @@
 # Copyright (c) 2018-2019 Florent Kermarrec <florent@enjoy-digital.fr>
 # SPDX-License-Identifier: BSD-2-Clause
 
+#This is a LiteDRAM configuration file for the Arty A7.
 {
     # General ------------------------------------------------------------------
     "speedgrade": -1,          # FPGA speedgrade
-    "cpu":        "None",  # CPU type (ex vexriscv, serv, None)
+    "cpu":        "None",  # CPU type (ex vexriscv, serv, None) - We only want to generate the LiteDRAM memory controller, no CPU.
     "memtype":    "DDR3",      # DRAM type
-    "uart":       "rs232",     # Type of UART interface (rs232, fifo)
+    "uart":       "rs232",     # Type of UART interface (rs232, fifo) - not relevant in this configuration.
 
     # PHY ----------------------------------------------------------------------
     "cmd_latency":     0,             # Command additional latency
@@ -24,6 +25,9 @@
     "ron":     "34ohm",  # Output driver impedance
 
     # Frequency ----------------------------------------------------------------
+    # The generated LiteDRAM module contains clock generation primitives, for its own purposes, but also for the rest
+    # of the system. The system clock is output by the LiteDRAM module and is supposed to be used as the main input clock
+    # for the rest of the system. I set the system clock to 50MHz because I couldn't get timing closure at 100MHz.
     "input_clk_freq":   100e6, # Input clock frequency
     "sys_clk_freq":     50e6, # System clock frequency (DDR_clk = 4 x sys_clk)
     "iodelay_clk_freq": 200e6, # IODELAYs reference clock frequency
@@ -32,15 +36,19 @@
     "cmd_buffer_depth": 16,    # Depth of the command buffer
 
     # User Ports ---------------------------------------------------------------
+    # We generate two wishbone ports, because BoxLambda has two system buses.
+    # Note that these are _classic_ wishbone ports, while BoxLamdba uses a _pipelined_ wisbone bus.
+    # A pipelined-to-classic wishbone adapter is needed to interface correctly to the bus.
+    # At some point it would be nice to have an actual pipelined wishbone frontend, with actual pipelining capability.
     "user_ports": {
         "wishbone_0" : {
             "type":  "wishbone",
-            "data_width": 32,
+            "data_width": 32, #Set data width to 32. If not specificied it defaults to 128 bits.
             "block_until_ready": True,
         },
         "wishbone_1" : {
             "type":  "wishbone",
-            "data_width": 32,
+            "data_width": 32, #Set data width to 32. If not specificied it defaults to 128 bits.
             "block_until_ready": True,
         },
     },
