gw component cmake build rules.

--- a/gw/components/ibex_wb_core/CMakeLists.txt
+++ b/gw/components/ibex_wb_core/CMakeLists.txt
@@ -1,6 +1,6 @@
 gw_component_rules(
-    TOP_MODULE wb_wbuart_wrap_wrap 
-    OOC_TARGET wbuart32 
+    TOP_MODULE ibex_wb_core_wrapper 
+    OOC_TARGET ibex_wb_core 
     VERILATOR_CPP_FLAGS "" 
     VERILATOR_LD_FLAGS ""
 )
