--- a/gw/components/riscv-dbg/CMakeLists.txt
+++ b/gw/components/riscv-dbg/CMakeLists.txt
@@ -1,6 +1,6 @@
 gw_component_rules(
-    TOP_MODULE wb_wbuart_wrap_wrap 
-    OOC_TARGET wbuart32 
+    TOP_MODULE riscv_dbg_wrapper 
+    OOC_TARGET riscv-dbg 
     VERILATOR_CPP_FLAGS "" 
     VERILATOR_LD_FLAGS ""
 )
