--- a/gw/components/ibex/CMakeLists.txt
+++ b/gw/components/ibex/CMakeLists.txt
@@ -1,6 +1,6 @@
 gw_component_rules(
-    TOP_MODULE wb_wbuart_wrap_wrap 
-    OOC_TARGET wbuart32 
+    TOP_MODULE ibex_top 
+    OOC_TARGET ibex 
     VERILATOR_CPP_FLAGS "" 
     VERILATOR_LD_FLAGS ""
 )
