--- a/gw/components/wb_gpio/CMakeLists.txt
+++ b/gw/components/wb_gpio/CMakeLists.txt
@@ -1,6 +1,6 @@
 gw_component_rules(
-    TOP_MODULE wb_wbuart_wrap_wrap 
-    OOC_TARGET wbuart32 
+    TOP_MODULE wb_gpio_wrapper 
+    OOC_TARGET wb_gpio 
     VERILATOR_CPP_FLAGS "" 
     VERILATOR_LD_FLAGS ""
 )
