cmake gw project build rules

--- a/gw/components/CMakeLists.txt
+++ b/gw/components/CMakeLists.txt
@@ -1,8 +1,8 @@
 #Function grouping gw component build rules.
 #TOP_MODULE: name of top module when synthesizing or linting component "Out Of Context" (OOC). Standalone in other words.
 #OOC_TARGET: name of Bender target set when synthesizing or linting component "Out Of Context" (OOC). Standalone in other words.
-#VERILATOR_CPP_FLAGS: CPP flags to use when verilating. Usually emptty. 
-#VERILATOR_LD_FLAGS: LD flags to use when verilating. Usually emptty. 
+#VERILATOR_CPP_FLAGS: CPP flags to use when verilating. Usually empty. 
+#VERILATOR_LD_FLAGS: LD flags to use when verilating. Usually empty. 
 function (gw_component_rules)
     set(options)
     set(oneValueArgs NAME TOP_MODULE OOC_TARGET VERILATOR_CPP_FLAGS VERILATOR_LD_FLAGS)
@@ -19,6 +19,13 @@ function (gw_component_rules)
     set(_verilator_cpp_flags ${gw_component_rules_VERILATOR_CPP_FLAGS}) 
     set(_verilator_ld_flags ${gw_component_rules_VERILATOR_LD_FLAGS})
 
+    # Dummy output which is never actually produced. Anything that depends on
+    # this will always be rebuilt.
+    add_custom_command(
+        OUTPUT always_rebuild
+        COMMAND cmake -E echo
+    )
+
     add_custom_command(
         OUTPUT
             ${_ooc_target}.vlts
@@ -26,6 +33,8 @@ function (gw_component_rules)
             ${PROJECT_SOURCE_DIR}/scripts/bender_get_vlts.sh ${CMAKE_CURRENT_LIST_DIR} ${_ooc_target}.vlts
         WORKING_DIRECTORY
             ${CMAKE_CURRENT_BINARY_DIR}
+        DEPENDS
+            always_rebuild
         COMMENT
             "Generating list of .vlt files."
         VERBATIM
@@ -38,6 +47,8 @@ function (gw_component_rules)
             ${PROJECT_SOURCE_DIR}/scripts/bender_gen_verilator_script.sh ${CMAKE_CURRENT_LIST_DIR} ${_ooc_target}.verilator_script ${_ooc_target}
         WORKING_DIRECTORY
             ${CMAKE_CURRENT_BINARY_DIR}
+        DEPENDS
+            always_rebuild
         COMMENT
             "Generating verilator script."
         VERBATIM
@@ -54,7 +65,7 @@ function (gw_component_rules)
         BYPRODUCTS 
             ${_ooc_target}.waiver
         COMMENT
-            "Lint check target."
+            "Lint check."
         VERBATIM
     )
 
@@ -66,6 +77,8 @@ function (gw_component_rules)
                 ${PROJECT_SOURCE_DIR}/scripts/bender_gen_vivado_script.sh ${CMAKE_CURRENT_LIST_DIR} ${_ooc_target}.vivado_script ${_ooc_target}
             WORKING_DIRECTORY
                 ${CMAKE_CURRENT_BINARY_DIR}
+            DEPENDS
+                always_rebuild
             COMMENT
                 "Generating vivado script."
             VERBATIM
@@ -79,7 +92,7 @@ function (gw_component_rules)
             DEPENDS
                 ${_ooc_target}.vivado_script
             COMMENT
-                "Component OOC synthesis target."
+                "Component OOC synthesis."
             VERBATIM
         )
 
