--- a/gw/projects/hello_world/Bender.yml
+++ b/gw/projects/hello_world/Bender.yml
@@ -15,7 +15,7 @@ dependencies:
 sources:
   - target: constraints
     files:
-      - ../../../sub/ibex_wb/soc/fpga/arty-a7-35/constrs/Arty-A7-35-Master.xdc
+      - constrs/Arty-A7-35-Master.xdc
   - target: verilator
     files:
       - sim/sim_main.cpp
